changed get-all api to get
